--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\Electronica\\AppData\\Roaming\\NetBeans\\20\\config\\GlassFishEE6\\Properties\\gfv3991787729.properties
+deploy.ant.properties.file=C:\\Users\\Sofia\\AppData\\Roaming\\NetBeans\\20\\config\\GlassFishEE6\\Properties\\gfv3991787729.properties
+file.reference.mysql-connector-java-5.1.47.jar=C:\\APIJavaFXIN5AV\\MySQL 5.1.47\\MySQL 5.1.47\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47-bin.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish5/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish5/glassfish
@@ -7,4 +8,4 @@ j2ee.server.middleware=C:/glassfish5
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Electronica\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\Sofia\\AppData\\Roaming\\NetBeans\\20\\build.properties
