feat: Cambió de colores de la animación principal de End Of Line en principal.css

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=C:/glassfish5
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\INTEL NUC\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\Informatica\\AppData\\Roaming\\NetBeans\\20\\build.properties
