--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Informatica\\AppData\\Roaming\\NetBeans\\20\\config\\GlassFishEE6\\Properties\\gfv3712852787.properties
+file.reference.mysql-connector-java-5.1.47.jar=C:\\APIJavaFXIN5AV\\mysql-connector-java-5.1.47-bin.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish5/glassfish5/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish5/glassfish5/glassfish
@@ -6,5 +7,5 @@ j2ee.server.instance=[C:\\glassfish5\\glassfish5\\glassfish;C:\\glassfish5\\glas
 j2ee.server.middleware=C:/glassfish5/glassfish5
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Informatica\\AppData\\Roaming\\NetBeans\\20\\build.properties
