--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[C:\\glassfish5\\glassfish;C:\\glassfish5\\glassfish\\domai
 j2ee.server.middleware=C:/glassfish5
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\ISAAC\\AppData\\Roaming\\NetBeans\\25\\build.properties
