--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Informatica\\AppData\\Roaming\\NetBeans\\20\\config\\GlassFishEE6\\Properties\\gfv3991787729.properties
-file.reference.mysql-connector-java-5.1.47.jar=C:\\APIJavaFXIN5AV\\mysql-connector-java-5.1.47-bin.jar
+deploy.ant.properties.file=C:\\Users\\INTEL NUC\\AppData\\Roaming\\NetBeans\\25\\config\\GlassFishEE6\\Properties\\gfv3991787729.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/glassfish5/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish5/glassfish
@@ -7,5 +6,5 @@ j2ee.server.instance=[C:\\glassfish5\\glassfish;C:\\glassfish5\\glassfish\\domai
 j2ee.server.middleware=C:/glassfish5
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Informatica\\AppData\\Roaming\\NetBeans\\20\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\INTEL NUC\\AppData\\Roaming\\NetBeans\\25\\build.properties
